[gd_scene load_steps=10 format=3 uid="uid://cm4j0j5hiofx2"]

[ext_resource type="Script" path="res://scripts/chest.gd" id="1_cmwih"]
[ext_resource type="Texture2D" uid="uid://ns60sxtwmb7i" path="res://graphics/spritesheets/chests.png" id="2_g66o0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lx8w6"]
size = Vector2(20, 18)

[sub_resource type="Animation" id="Animation_7jgne"]
resource_name = "OpenBlack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_htktg"]
resource_name = "OpenRed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_m6f48"]
resource_name = "OpenWhite"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_7x2e8"]
resource_name = "OpenWooden"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_7sku2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8l6qd"]
_data = {
"OpenBlack": SubResource("Animation_7jgne"),
"OpenRed": SubResource("Animation_htktg"),
"OpenWhite": SubResource("Animation_m6f48"),
"OpenWooden": SubResource("Animation_7x2e8"),
"RESET": SubResource("Animation_7sku2")
}

[node name="Chest" type="Area2D"]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource("1_cmwih")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
texture = ExtResource("2_g66o0")
offset = Vector2(8, -16)
hframes = 5
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_lx8w6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8l6qd")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
